# InertiaEngine

./: CMakeLists.txt  README.md  common-definitions.hpp  constants.hpp  movement-result.cpp  movement-result.hpp  utility.cpp  utility.hpp
game-generator/: game-generator.cpp  game-generator.hpp
model/: game-model.cpp  game-model.hpp
service/: hint-handler.cpp  hint-handler.hpp  move-handler.cpp  move-handler.hpp
state/: game-state-maintainer.cpp  game-state-maintainer.hpp  state-wrapper.hpp
